--- a/templates/tutorial/toc_common_online.html
+++ b/templates/tutorial/toc_common_online.html
@@ -3,7 +3,7 @@
 {% load profile %}
 {% load roman %}
 
-<div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions sur ce sujet">
+<div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Sommaire">
         <h3><span class="wide">Sommaire</span></h3>
         {% if tutorial.is_mini %}
         {# Small tutorial #}
