correct summary class

--- a/templates/tutorial/base.html
+++ b/templates/tutorial/base.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block sidebar %}
-<aside class="sidebar mobile-menu-hide">
+<aside class="sidebar sommaire mobile-menu-hide">
 	{% block headline-actions %}{% endblock %}
 </aside>
 {% endblock %}
